[tool.poetry]
name = "linkedin-scraper"
version = "0.1.0"
description = ""
authors = ["Ritesh Ahlawat <rahlawat@thia.tech>"]
readme = "README.md"
packages = [{include = "linkedin_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
selenium = "^4.6.0"
requests = "^2.28.1"
undetected-chromedriver = "^3.1.7"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
